@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2017 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -44,9 +44,7 @@ public class JarLauncherTests extends AbstractExecutableArchiveLauncherTests {
 		assertThat(archives).hasSize(2);
 		assertThat(getUrls(archives)).containsOnly(
 				new File(explodedRoot, "BOOT-INF/classes").toURI().toURL(),
-				new URL("jar:"
-						+ new File(explodedRoot, "BOOT-INF/lib/foo.jar").toURI().toURL()
-						+ "!/"));
+				new File(explodedRoot, "BOOT-INF/lib/foo.jar").toURI().toURL());
 	}
 
 	@Test
